--- a/style.css
+++ b/style.css
@@ -72,3 +72,9 @@ a {
     padding: 2rem 5rem;
 }
 
+.skills-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
+
