--- a/style.css
+++ b/style.css
@@ -104,6 +104,25 @@ a {
     padding: 2rem 5rem;
 }
 
+.full-width-section {
+    background: linear-gradient(to top, #B0BEC5, #CFD8DC);
+    padding: 2rem;
+}
+
+.profile-img-wrapper {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.profile-img-wrapper img {
+    width: 90%;  /* Adjust this value according to your design */
+    height: auto;  /* This will maintain the aspect ratio of the image */
+    object-fit: cover;
+    border-radius: 20%;  /* This will create a circular avatar image */
+}
+
+
+
 .company {
     /*border: 2px solid #2d2d2d; !* Adds a border *!*/
     /*padding: 20px; !* Adds some space inside the border *!*/
@@ -122,10 +141,19 @@ a {
 
 
 .skills-list {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
+    column-count: 2;
+    column-gap: 10px;
+    padding: 0;
+    list-style-type: none;
 }
+
+.skills-list > li {
+    display: inline-block;
+    width: 100%;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
 
 footer {
     background: linear-gradient(to bottom right, #B0BEC5, #CFD8DC, #ECEFF1); /* same gradient as header */
@@ -161,6 +189,13 @@ footer {
 
 .footer-row h4 {
     margin-bottom: 0.5em; /* Add some space below the heading */
+}
+
+.checkmark::before {
+    /*content: "\f00c";  !* Unicode character for Font Awesome checkmark icon *!
+    font-family: "Font Awesome 5 Free";  !* Specify Font Awesome font-family *!
+    font-weight: 900;  !* Font weight required for the checkmark icon *!
+    padding-right: 10px;  !* Optional: Adds some spacing between the icon and the text *!*/
 }
 
 
