fix  mob responsiveness

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ a {
 .header {
     background: linear-gradient(to bottom right, #B0BEC5, #CFD8DC, #ECEFF1);
     padding: 2em 1em;
-    color: #2d2d2d; /* Adjusting text color for better readability */
+    color: #2d2d2d;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -64,7 +64,6 @@ a {
     right: 1em;
 }
 
-
 .language-switch ul {
     list-style-type: none;
     margin: 0;
@@ -79,16 +78,14 @@ a {
 
 .language-switch a {
     text-decoration: none;
-    color: #2d2d2d; /* Adjusting text color to match header text color */
+    color: #2d2d2d;
 }
-
 
 .container {
     display: flex;
 }
 
 .left-panel {
-    /*background: linear-gradient(to right, rgb(190, 147, 197), rgb(123, 198, 204));*/
     background: linear-gradient(to right, #B0BEC5, #CFD8DC);
     flex: 3;
     display: flex;
@@ -98,8 +95,7 @@ a {
 }
 
 .right-panel {
-    /*background-color: var(--light-bg-color);*/
-    background-color: #CFD8DC; /* This color is taken from the gradient of the left panel */
+    background-color: #CFD8DC;
     flex: 7;
     padding: 2rem 5rem;
 }
@@ -115,30 +111,17 @@ a {
 }
 
 .profile-img-wrapper img {
-    width: 90%;  /* Adjust this value according to your design */
-    height: auto;  /* This will maintain the aspect ratio of the image */
+    width: 90%;
+    height: auto;
     object-fit: cover;
-    border-radius: 20%;  /* This will create a circular avatar image */
+    border-radius: 20%;
 }
 
-
-
 .company {
-    /*border: 2px solid #2d2d2d; !* Adds a border *!*/
-    /*padding: 20px; !* Adds some space inside the border *!*/
-    /*background-color: #f0f0f0; !* A light grey background color *!*/
-    /*margin: 10px 0; !* Adds some space outside the border, separating it from other elements *!*/
-    /*border-radius: 10px; !* Optional: Rounds the corners of the border *!*/
 }
 
 .responsibilities {
-    /*border: 2px solid #2d2d2d; !* Adds a border *!*/
-    /*padding: 5px; !* Adds some space inside the border *!*/
-    /*background-color: #f0f0f0; !* A light grey background color *!*/
-    /*margin: 10px 0; !* Adds some space outside the border, separating it from other elements *!*/
-    /*border-radius: 10px; !* Optional: Rounds the corners of the border *!*/
 }
-
 
 .skills-list {
     column-count: 2;
@@ -154,49 +137,72 @@ a {
     margin-bottom: 10px;
 }
 
-
 footer {
-    background: linear-gradient(to bottom right, #B0BEC5, #CFD8DC, #ECEFF1); /* same gradient as header */
+    background: linear-gradient(to bottom right, #B0BEC5, #CFD8DC, #ECEFF1);
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: flex-start; /* Aligns items to the top of the footer */
+    align-items: flex-start;
     padding: 1em;
-    gap: 1em; /* Adds space between the columns */
-    color: #2d2d2d; /* same text color as header */
-    /*box-shadow: 0 2px 4px rgba(0,0,0,0.1); !* subtle shadow for elevation *!*/
+    gap: 1em;
+    color: #2d2d2d;
 }
 
 .footer-row {
-    flex: 1; /* Ensures each .footer-row takes up equal space */
+    flex: 1;
     padding: 1em;
     text-align: center;
-    /*background-color: #FFFFFF; !* Optional: white background for each column *!*/
-    /*border-radius: 4px; !* Optional: rounded corners *!*/
-    /*box-shadow: 0 2px 4px rgba(0,0,0,0.1); !* subtle shadow for elevation *!*/
-    margin: 0.5em; /* space between columns */
+    margin: 0.5em;
 }
 
 .footer-row a {
-    color: var(--secondary-bg-color); /* use the secondary color for links */
-    /* ... other styles ... */
+    color: var(--secondary-bg-color);
 }
 
-
 .downloads, .social-links, .contacts {
-    text-align: center; /* Center the text */
+    text-align: center;
 }
 
 .footer-row h4 {
-    margin-bottom: 0.5em; /* Add some space below the heading */
+    margin-bottom: 0.5em;
 }
 
 .checkmark::before {
-    /*content: "\f00c";  !* Unicode character for Font Awesome checkmark icon *!
-    font-family: "Font Awesome 5 Free";  !* Specify Font Awesome font-family *!
-    font-weight: 900;  !* Font weight required for the checkmark icon *!
-    padding-right: 10px;  !* Optional: Adds some spacing between the icon and the text *!*/
 }
 
+/* Responsive styles */
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .left-panel, .right-panel {
+        padding: 1rem;
+    }
+
+    .right-panel {
+        padding: 1rem 2rem;
+    }
+
+    .full-width-section {
+        padding: 1rem;
+    }
+
+    .skills-list {
+        column-count: 1;  /* Change column count to 1 for screens smaller than 768px */
+    }
 
 
+    footer {
+        flex-direction: column;
+        align-items: center;  /* Center align items along the cross axis */
+        text-align: center;   /* Center text within each .footer-row */
+        padding: 0;           /* Set padding to 0 */
+    }
+
+    .footer-row {
+        margin: 0;  /* Set margin to 0 */
+        padding: 0;  /* Set padding to 0 */
+        width: 100%;  /* Ensure each .footer-row takes up the full width */
+    }
+}
