--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ a {
 }
 
 .profile-img-wrapper img {
-    width: 90%;
+    width: 100%;
     height: auto;
     object-fit: cover;
     border-radius: 20%;
@@ -172,6 +172,18 @@ footer {
 
 /* Responsive styles */
 @media (max-width: 768px) {
+
+    .header-content h1 {
+        font-size: 1.5rem;  /* Adjust the font size for mobile */
+        line-height: 1.8rem;  /* Adjust the line height for mobile */
+        margin-bottom: 0.5rem;  /* Add some margin below the text to create spacing */
+    }
+
+    .header-content h2 {
+        font-size: 1.2rem;  /* Adjust the font size for the 'QA Engineer' text for mobile */
+        line-height: 1.2rem;  /* Adjust the line height for mobile */
+    }
+
     .container {
         flex-direction: column;
     }
