--- a/style.css
+++ b/style.css
@@ -173,6 +173,10 @@ footer {
 /* Responsive styles */
 @media (max-width: 1200px) {
 
+    body {
+        font-size: 200%; /* Increased font size for mobile */
+    }
+
     .profile-img-wrapper {
         display: flex;
         justify-content: center;
@@ -186,13 +190,13 @@ footer {
     }
 
     .header-content h1 {
-        font-size: 1.5rem;  /* Adjust the font size for mobile */
+        font-size: 200%;  /* Adjust the font size for mobile */
         line-height: 1.8rem;  /* Adjust the line height for mobile */
         margin-bottom: 0.5rem;  /* Add some margin below the text to create spacing */
     }
 
     .header-content h2 {
-        font-size: 1.2rem;  /* Adjust the font size for the 'QA Engineer' text for mobile */
+        font-size: 150%;   /* Adjust the font size for the 'QA Engineer' text for mobile */
         line-height: 1.2rem;  /* Adjust the line height for mobile */
     }
 
